ingress/gscloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gs-cloud-network
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/client-max-body-size: "200M"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600s"
    nginx.ingress.kubernetes.io/proxy-body-size: "200M"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600s"

    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - example.com
    secretName: letsencrypt-prod
  rules:
  - host: example.com
    http:
      paths:
      - path: /geoserver
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080

      - path: /login
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080

      - path: /logout
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080

      - path: /acl
        pathType: Prefix
        backend:
          service:
            name: acl
            port:
              number: 8080
